Implemented /game/{game}/cards/playing/score/{id} in the control service
